<resources>
    <string name="app_name">WeatherCalendar</string>
    <string name="title_today">當日課表</string>
    <string name="title_memo">當日備忘</string>
    <string name="title_week">一周課表</string>
    <string name="title_schedule">行程推薦</string>
    <string name="title_setting">系統設定</string>

    <string-array name="my_week_title">
        <item>四月</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>

    <string-array name="my_home_title">
        <item>本日</item>
        <item>Mon</item>
    </string-array>
</resources>
